[package]
name = "rustegan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"]}
serde_json = "1"
derive_more = "0.99"
anyhow = "1"
jsonrpsee = { version = "0.20", features = ["server", "macros"]}
uuid = { version = "1", features = ["v4", "fast-rng"]}
rand = "0.8.5"

[features]
client = ["jsonrpsee/client"]
